Add dataset download functionality and training improvements (with formatting fixes)
- Added dataset downloading from HuggingFace in train.py
- Fixed chat history item structure for db_bench
- Updated lab_http_env.py with correct API endpoints
- Modified configuration files for proper model setup
- Added training script with GRPO configuration
- Applied black formatting

--- a/configs/assignments/debugs/instance/db_bench.yaml
+++ b/configs/assignments/debugs/instance/db_bench.yaml
@@ -22,4 +22,4 @@ assignment_config:
   output_dir: "outputs/{TIMESTAMP}"
   sample_order: default
 environment_config:
-  use_task_client_flag: false
+  use_task_client_flag: true
