--- a/configs/assignments/experiments/llama_31_8b_instruct/agent.yaml
+++ b/configs/assignments/experiments/llama_31_8b_instruct/agent.yaml
@@ -1,10 +1,10 @@
 assignment_config:
   language_model_list:
-  - name: Llama-3.1-8B-Instruct
+  - name: Qwen2.5-7B-Instruct
   agent:
     name: language_model_agent
     custom_parameters:
-      language_model: Llama-3.1-8B-Instruct
+      language_model: Qwen2.5-7B-Instruct
       inference_config_dict:
         do_sample: false
         num_beams: 1
