--- a/configs/components/language_models/huggingface_language_model.yaml
+++ b/configs/components/language_models/huggingface_language_model.yaml
@@ -5,7 +5,7 @@ default:
       user: "user"
       agent: "assistant"
     dtype: "bfloat16"
-    device_map: "niuload"
+    device_map: "auto"
 
 Llama-3.1-8B-Instruct:
   parameters:
@@ -13,11 +13,11 @@ Llama-3.1-8B-Instruct:
 
 DeepSeek-R1-Distill-Llama-8B:
   parameters:
-    model_name_or_path: "/mnt/pfs_l2/jieti_team/MMGroup/lzz/huggingface_checkpoint/DeepSeek-R1-Distill-Llama-8B"
+    model_name_or_path: "deepseek-ai/DeepSeek-R1-Distill-Llama-8B"
 
 Qwen2.5-7B-Instruct:
   parameters:
-    model_name_or_path: "/mnt/pfs_l2/jieti_team/MMGroup/lzz/huggingface_checkpoint/Qwen2.5-7B-Instruct"
+    model_name_or_path: "Qwen/Qwen2.5-7B-Instruct"
 
 DeepSeek-R1-Distill-Qwen-7B:
   parameters:
